unpackaged/main/default/objects/Komen_Survey_Feedback__c/Komen_Survey_Feedback__c.object-meta.xml
<CustomObject>
    <label>Komen Survey Feedback</label>
    <nameField>
        <label>Komen Survey Feedback</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Komen Survey Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>