unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Able_to_get_what_I_needed__c.field-meta.xml
<CustomField>
    <fullName>Able_to_get_what_I_needed__c</fullName>
    <label>Able to get what I needed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>