unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/After_TAP_what_did_you_do__c.field-meta.xml
<CustomField>
    <fullName>After_TAP_what_did_you_do__c</fullName>
    <label>After TAP what did you do?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>