unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Anything_else_to_share__c.field-meta.xml
<CustomField>
    <fullName>Anything_else_to_share__c</fullName>
    <label>Anything else to share?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>