unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Komen Survey Feedback</relationshipLabel>
    <relationshipName>Komen_Survey_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>