unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Application_was_easy_to_complete__c.field-meta.xml
<CustomField>
    <fullName>Application_was_easy_to_complete__c</fullName>
    <label>Application was easy to complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>