unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Care_Program_Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Enrollee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Program Enrollee</label>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Komen Survey Feedback</relationshipLabel>
    <relationshipName>Komen_Survey_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>