unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Lookup to hold Case reference related to Survey.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Komen Survey Feedback</relationshipLabel>
    <relationshipName>Komen_Survey_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>