unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Date_Time_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Sent__c</fullName>
    <description>The Date and Time that the Survey was sent - assumed to be very close to the date/time that it is actually sent based on the Date and Time Salesforce sends it to Qualtrics</description>
    <label>Date/Time Sent</label>
    <type>DateTime</type>
</CustomField>