unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Date_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Send__c</fullName>
    <description>If sending the Survey in the future, identifies the date it should be sent</description>
    <label>Date to Send</label>
    <type>Date</type>
</CustomField>