unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Did_TAP_affect_speed_of_care__c.field-meta.xml
<CustomField>
    <fullName>Did_TAP_affect_speed_of_care__c</fullName>
    <label>Did TAP affect speed of care?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>