unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>