unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Email_to_Share__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Share__c</fullName>
    <label>Email to Share</label>
    <type>Email</type>
</CustomField>