unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Experience_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Experience_Explanation__c</fullName>
    <label>Experience Explanation</label>
    <type>TextArea</type>
</CustomField>