unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Experience_Rating__c</fullName>
    <label>Experience Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>