unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>