unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/HDY_Use_the_funds__c.field-meta.xml
<CustomField>
    <fullName>HDY_Use_the_funds__c</fullName>
    <label>HDY Use the funds?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>