unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/HDY_Use_the_funds_Other_text__c.field-meta.xml
<CustomField>
    <fullName>HDY_Use_the_funds_Other_text__c</fullName>
    <label>HDY Use the funds - Other text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>