unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/HDYH_Treatment_Program__c.field-meta.xml
<CustomField>
    <fullName>HDYH_Treatment_Program__c</fullName>
    <label>HDYH Treatment Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>