unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/how_did_TAP_help__c.field-meta.xml
<CustomField>
    <fullName>how_did_TAP_help__c</fullName>
    <label>how did TAP help?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>