unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/How_likely_are_you_to_refer_Komen__c.field-meta.xml
<CustomField>
    <fullName>How_likely_are_you_to_refer_Komen__c</fullName>
    <label>How likely are you to refer Komen?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>