unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/I_feel_better_after_contacting_Komen__c.field-meta.xml
<CustomField>
    <fullName>I_feel_better_after_contacting_Komen__c</fullName>
    <label>I feel better after contacting Komen</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>