unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/I_feel_more_confident_caring_for_myself__c.field-meta.xml
<CustomField>
    <fullName>I_feel_more_confident_caring_for_myself__c</fullName>
    <label>I feel more confident caring for myself</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>