unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/I_feel_more_confident_making_decisions__c.field-meta.xml
<CustomField>
    <fullName>I_feel_more_confident_making_decisions__c</fullName>
    <label>I feel more confident making decisions</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>