unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/I_feel_more_prepared_for_communication__c.field-meta.xml
<CustomField>
    <fullName>I_feel_more_prepared_for_communication__c</fullName>
    <label>I feel more prepared for communication</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>