unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/I_was_able_to_find_care_faster__c.field-meta.xml
<CustomField>
    <fullName>I_was_able_to_find_care_faster__c</fullName>
    <label>I was able to find care faster</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>