unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Improved_quality_of_life__c.field-meta.xml
<CustomField>
    <fullName>Improved_quality_of_life__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Improved quality of life?</label>
    <type>Checkbox</type>
</CustomField>