unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Name_to_Share__c.field-meta.xml
<CustomField>
    <fullName>Name_to_Share__c</fullName>
    <label>Name to Share</label>
    <length>255</length>
    <type>Text</type>
</CustomField>