unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <description>Id of the object that this Survey should be linked to</description>
    <label>Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>