unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <label>Other Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>