unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Komen Survey Feedback</relationshipLabel>
    <relationshipName>Komen_Survey_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>