unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name__c</fullName>
    <formula>Patient__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Last Name</label>
    <type>Text</type>
</CustomField>