unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Phone_to_Share__c.field-meta.xml
<CustomField>
    <fullName>Phone_to_Share__c</fullName>
    <label>Phone to Share</label>
    <length>255</length>
    <type>Text</type>
</CustomField>