unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Process_was_efficient__c.field-meta.xml
<CustomField>
    <fullName>Process_was_efficient__c</fullName>
    <label>Process was efficient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>