unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Racial_and_Ethnic_Groups__c.field-meta.xml
<CustomField>
    <fullName>Racial_and_Ethnic_Groups__c</fullName>
    <label>Racial and Ethnic Groups</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>