unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Rate_Experience_with_TAP__c.field-meta.xml
<CustomField>
    <fullName>Rate_Experience_with_TAP__c</fullName>
    <label>Rate Experience with TAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>