unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Recorded_Date__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Date__c</fullName>
    <label>Recorded Date</label>
    <type>DateTime</type>
</CustomField>