unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Response_ID__c</fullName>
    <externalId>true</externalId>
    <label>Response ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>