unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <label>Response Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>