unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Send_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Send_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, kicks off an Outbound Message to the Qualtrics system.  May be set on create, or updated via Flow process</description>
    <label>Send Immediately</label>
    <type>Checkbox</type>
</CustomField>