unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Staff_was_friendly__c.field-meta.xml
<CustomField>
    <fullName>Staff_was_friendly__c</fullName>
    <label>Staff was friendly</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>