unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Staff_was_informative__c.field-meta.xml
<CustomField>
    <fullName>Staff_was_informative__c</fullName>
    <label>Staff was informative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>