unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>