unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Survey_Listener_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Listener_URL__c</fullName>
    <formula>Survey_Reference__r.Survey_Event_Endpoint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Listener URL</label>
    <type>Text</type>
</CustomField>