unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <formula>Survey_Reference__r.Name</formula>
    <label>Survey Name</label>
    <type>Text</type>
</CustomField>