unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Survey_Reference__c.field-meta.xml
<CustomField>
    <fullName>Survey_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Survey Reference to identify Qualtrics Survey for which survey is sent.</description>
    <label>Survey Reference</label>
    <referenceTo>Qualtrics_Survey_Link__c</referenceTo>
    <relationshipLabel>Komen Survey Feedback</relationshipLabel>
    <relationshipName>Komen_Survey_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>