unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/User_Language__c.field-meta.xml
<CustomField>
    <fullName>User_Language__c</fullName>
    <label>User Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>