unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Were_all_of_your_questions_answered__c.field-meta.xml
<CustomField>
    <fullName>Were_all_of_your_questions_answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Were all of your questions answered?</label>
    <type>Checkbox</type>
</CustomField>