unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/What_actions_did_you_take_as_a_result__c.field-meta.xml
<CustomField>
    <fullName>What_actions_did_you_take_as_a_result__c</fullName>
    <label>What actions did you take as a result?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>