unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/What_resources_were_you_connected_to__c.field-meta.xml
<CustomField>
    <fullName>What_resources_were_you_connected_to__c</fullName>
    <label>What resources were you connected to?</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>