unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Which_Questions_Were_Not_Answered__c.field-meta.xml
<CustomField>
    <fullName>Which_Questions_Were_Not_Answered__c</fullName>
    <label>Which Questions Were Not Answered?</label>
    <type>TextArea</type>
</CustomField>