unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Why_this_rating__c.field-meta.xml
<CustomField>
    <fullName>Why_this_rating__c</fullName>
    <label>Most important reason for this rating?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>