unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/Willing_to_Share_more__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Share_more__c</fullName>
    <label>Willing to Share more?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>