unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/You_indicated_the_Treatment_Assistance_1__c.field-meta.xml
<CustomField>
    <fullName>You_indicated_the_Treatment_Assistance_1__c</fullName>
    <label>How many trips did the funds allow for?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>