unpackaged/main/default/objects/Komen_Survey_Feedback__c/fields/You_indicated_the_Treatment_Assistance_F__c.field-meta.xml
<CustomField>
    <fullName>You_indicated_the_Treatment_Assistance_F__c</fullName>
    <label>How many oral prescriptions did it pay?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>