unpackaged/main/default/objects/Komen_Survey_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Patient_Email_Address__c</columns>
    <columns>Survey_Reference__c</columns>
    <columns>Date_to_Send__c</columns>
    <columns>Date_Time_Sent__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Recorded_Date__c</columns>
    <columns>Application__c</columns>
    <columns>Case__c</columns>
    <columns>Response_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>